# ds-gnostic-recommendation

./: .gitignore  pyproject.toml
Utilities_Functions/: utilities.py
knowledge_graph/: utilities.py
knowledge_graph/notebook/: 01_crawling.ipynb  02_ESCO_import.ipynb  03_GO1_import.ipynb  1-GO1_data_download_EDA_reg.ipynb  3-Data Import.ipynb  4-Query_Outputs.ipynb  Data Import.ipynb  GO1_data_download_EDA_reg.ipynb  download_go1_data.ipynb
knowledge_graph/scripts/: test_server.py
