[tool.poetry]
name = "kg"
version = "0.1.0"
description = ""
authors = ["catethos <cloverethos@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<=3.10"
pandas = "^1.4.2"
seaborn = "^0.11.2"
neo4j = "^4.4.2"
ipykernel = "^6.13.0"
requests = "^2.27.1"
tqdm = "^4.64.0"
py2neo = "^2021.2.3"
spacy = "^3.3.0"
pytextrank = "^3.2.3"

[tool.poetry.dev-dependencies]
tqdm = "^4.64.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
